--- a/src/main/webapp/stylesheet.css
+++ b/src/main/webapp/stylesheet.css
@@ -1,3 +1,16 @@
+.logo {
+    float: left;
+    width: 126px;
+}
+
+div{
+    display: block;
+    
+}
+h2{
+    color: white
+    
+}
 li {
     float: left;
 }
@@ -19,5 +32,10 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    
+}
+.navwrapper{
+    background-color: #00008B;
+    
+    
 }
