--- a/src/main/webapp/stylesheet.css
+++ b/src/main/webapp/stylesheet.css
@@ -1,3 +1,16 @@
+.img-responsive {
+    display: block;
+    max-width: 100%;
+    height: 90px;
+}
+
+img {
+    vertical-align: middle;
+}
+img {
+    border: 0;
+}
+
 .logo {
     float: left;
     width: 126px;
