--- a/src/main/webapp/stylesheet.css
+++ b/src/main/webapp/stylesheet.css
@@ -9,4 +9,36 @@ body{
     padding-right: 15px;
 
 }
+.modal {
+    display: none;
+    position: fixed;
+    left: 0;
 
+    width: 80%;
+    top: 0;
+    text-align: center;
+    overflow: auto;
+
+
+}
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
