--- a/src/main/webapp/stylesheet.css
+++ b/src/main/webapp/stylesheet.css
@@ -9,6 +9,14 @@ body{
     padding-right: 15px;
 
 }
+.middle{
+    
+    
+     margin-left:auto; 
+    margin-right:auto;
+    
+}
+
 .modal {
     display: none;
     position: fixed;
