--- a/src/main/webapp/stylesheet.css
+++ b/src/main/webapp/stylesheet.css
@@ -9,7 +9,28 @@ body{
     padding-right: 15px;
 
 }
+.middle{
+    
+    
+     margin-left:auto; 
+    margin-right:auto;
+    
+}
+
 .modal {
+    display: none;
+    position: fixed;
+    left: 0;
+
+    width: 80%;
+    top: 0;
+    text-align: center;
+    overflow: auto;
+
+
+}
+
+.modalone {
     display: none;
     position: fixed;
     left: 0;
@@ -29,6 +50,14 @@ body{
     width: 80%;
 }
 
+.modal-contentone {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
 .close {
     color: #aaaaaa;
     float: right;
@@ -38,6 +67,20 @@ body{
 
 .close:hover,
 .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.closeone {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.closeone:hover,
+.closeone:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
