making more to SVG

--- a/src/main/webapp/stylesheet.css
+++ b/src/main/webapp/stylesheet.css
@@ -24,6 +24,13 @@ body{
     
 }
 
+
+.indeximage img{
+    height: 200px;
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 /*---- customerpage ----*/
 
 .customerpagepicture{
