--- a/src/main/webapp/stylesheetjavascript.css
+++ b/src/main/webapp/stylesheetjavascript.css
@@ -24,6 +24,21 @@
 
 
 }
+
+.modalitemlist {
+    display: none;
+    position: fixed;
+    left: 0;
+
+    width: 80%;
+    top: 0;
+    text-align: center;
+    overflow: auto;
+
+
+}
+
+
 .modal-content {
     background-color: #fefefe;
     margin: auto;
@@ -38,6 +53,19 @@
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
+
+}
+
+.modal-contentitemlist {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    padding-left: 100px;
+    border: 1px solid #888;
+    width: 80%;
+    font-size: 10px;
+    
+    
 
 }
 
@@ -64,6 +92,20 @@
 
 .closeone:hover,
 .closeone:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.closeitemlist {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.closeitemlist:hover,
+.closeitemlist:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
