--- a/src/main/webapp/stylesheet.css
+++ b/src/main/webapp/stylesheet.css
@@ -6,7 +6,7 @@ body{
     margin:0;
     padding:0;
     height:100%;
-
+    font-size: 14px;
 
 }
 
@@ -27,9 +27,9 @@ body{
 
 .indeximagecarportquickbyg img{
     float: left;
-    height: 150px;
+    height: 160px;
     display: block;
-    margin-left: 200px;
+    margin-left: 150px;
     margin-right: auto;
 
 }
@@ -174,6 +174,7 @@ h1,h2,h3,h4{
     display: block;
     margin-left: 200px;
     margin-right: auto;
+    
 
 }
 
