--- a/src/main/webapp/stylesheet.css
+++ b/src/main/webapp/stylesheet.css
@@ -6,7 +6,12 @@ body{
     margin:0;
     padding:0;
     height:100%;
-    font-size: 14px;
+    font-size: 16px;
+
+}
+.list-group{
+
+    color: black;
 
 }
 
@@ -24,13 +29,40 @@ body{
 
 }
 
+/*--------- order -----*/
+
+.inputstl { 
+    padding: 9px; 
+    border: solid 1px #0077B0; 
+    outline: 0; 
+    background: -webkit-gradient(linear, left top, left 25, from(#FFFFFF), color-stop(4%, #C6ECFF), to(#FFFFFF)); 
+    background: -moz-linear-gradient(top, #FFFFFF, #C6ECFF 1px, #FFFFFF 25px); 
+    box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px; 
+    -moz-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px; 
+    -webkit-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px; 
+
+} 
+
+
+
 
 .indeximagecarportquickbyg img{
     float: left;
-    height: 160px;
+    height: 15%;
     display: block;
-    margin-left: 150px;
-    margin-right: auto;
+    margin-left: 5%;
+    margin-right: 5%;
+
+}
+
+/*------- updateinfopage ----------*/
+
+.information-text-center-site{
+    padding-top: 50px;
+    float:left;
+    margin-left: 100px;
+    margin-right: 150px;
+
 
 }
 
@@ -38,11 +70,8 @@ body{
 
 
 .updateinfopagetable{
-
-
     vertical-align: center;
-
-    margin-left:auto; 
+    margin-left: 150px; 
     margin-right:auto;
 
 } 
@@ -112,7 +141,7 @@ body{
 .Restrationform{
     margin: 0;
     padding: 0;
-    
+
 }
 .Regstrationtext{
     padding-left: 5px;
@@ -133,7 +162,7 @@ body{
     margin-left: auto;
     margin-right: 50px;
     float: right;
-    
+
 }
 
 
@@ -174,7 +203,7 @@ h1,h2,h3,h4{
     display: block;
     margin-left: 200px;
     margin-right: auto;
-    
+
 
 }
 
@@ -187,5 +216,6 @@ h1,h2,h3,h4{
     margin-right:auto;
 
 }
+
 
 
