--- a/src/main/webapp/stylesheetnavigation.css
+++ b/src/main/webapp/stylesheetnavigation.css
@@ -1,7 +1,7 @@
 .img-responsive {
     display: block;
     max-width: 100%;
-    height: 90px;
+    height: 126px;
 }
 
 img {
@@ -12,7 +12,13 @@ img {
 .logo {
     float: left;
     width: 126px;
-   
+    margin-right: 10px;
+}
+
+.nav {
+    margin-bottom: 0;
+    padding-left: 0;
+    list-style: none;
 }
 
 
@@ -24,15 +30,13 @@ img {
     padding-left: 15px;
     padding-right: 15px;
     width: auto;
-    
+
 }
 
 
-li {
-    float: left;
-}
 
-li a {
+
+.topviews a {
     display: block;
     color: white;
     text-align: center;
@@ -40,8 +44,9 @@ li a {
     text-decoration: none;
 }
 
-li a:hover {
+.topviews a:hover {
     background-color:  	#0000FF;
+    color: white;
 }
 
 ul {
@@ -57,11 +62,35 @@ ul {
     display: block;
     float: left;
     top: 0;
+
+}
+
+header nav .nav_wrapper .nav {
+    float: left;
+    width: 1014px;
+}
+
+header nav .navwrapper {
+    background-color: #0c2069;
+    width: 100%;
+    display: block;
+    float: left;
+}
+
+.row {
+    margin-left: -15px;
+    margin-right: -15px;
     
 }
 
+header nav .mainnavigation {
+    border-top: solid 1px #0085a2;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
 .element {
-   
+
     width: 100%;
     height: auto;
     vertical-align: bottom;
