rette lidt i sætup med tekst større på nav

--- a/src/main/webapp/stylesheetnavigation.css
+++ b/src/main/webapp/stylesheetnavigation.css
@@ -42,6 +42,8 @@ img {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-family: fantasy;
+    font-size: 18px;
 }
 
 .topviews a:hover {
