--- a/src/main/webapp/stylesheetnavigation.css
+++ b/src/main/webapp/stylesheetnavigation.css
@@ -42,7 +42,7 @@ img {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-family: fantasy;
+    font-family: inherit;
     font-size: 18px;
 }
 
