--- a/src/main/webapp/stylesheetfooter.css
+++ b/src/main/webapp/stylesheetfooter.css
@@ -1,5 +1,5 @@
 #footer{ 
-    left: 40px;
+    left: 5%;
     
     background-color: #0c2069;
     color: white;
@@ -7,7 +7,7 @@
     width: 90%;
     margin-left: auto;
     margin-right: auto;
-  height: 40px;
+  height: 30px;
    bottom: 0;
  position: fixed; 
  
