--- a/src/main/webapp/stylesheet.css
+++ b/src/main/webapp/stylesheet.css
@@ -268,7 +268,25 @@ h1,h2,h3,h4{
 
 }
 
+/*--- myorders -------*/
 
+    
+    
+
+.table th {
+    text-align: center;
+}
+
+.table-hover {
+    border-radius: 5px;
+    width: 20%;
+    float: none;
+    table-layout:fixed;
+}
+
+.table td {
+    text-align: center;
+}
 
 
 
