--- a/src/main/webapp/stylesheet.css
+++ b/src/main/webapp/stylesheet.css
@@ -288,5 +288,14 @@ h1,h2,h3,h4{
     text-align: center;
 }
 
+.customorderimg{
+    height: 200px;
+    
+}
+.customorderimgdiv{
+    
+    float: right;
+    
+}
 
 
